<?xml version="1.0" encoding="utf-8"?>
<!-- Formats a note can leave Quill as, shown from the options menu's Export item. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_export_pdf"
        android:icon="@drawable/ic_menu_pdf"
        android:title="@string/action_export_pdf" />

    <item
        android:id="@+id/action_export_markdown"
        android:icon="@drawable/ic_menu_markdown"
        android:title="@string/action_export_markdown" />

    <!-- Last of the three because it is the one that isn't for leaving Quill: PDF and Markdown go
         to other tools, a bundle goes to another copy of this app. -->
    <item
        android:id="@+id/action_export_bundle"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/action_export_bundle" />

</menu>
